# PrisML

./: .gitignore  README.md  pyproject.toml
prisml/: __init__.py
prisml/core/: tensor.py
tests/: test_tensor.py
